tests/NormalTests/paczka1/fuzzy1/15400133.err
Error in line 2: A648 A648 18,5
Error in line 6: OtgTxFr S998 82,8
Error in line 11: AOV A648 73,0
Error in line 33: AOV A648 34,7
Error in line 39: AOV S742 5,9
